# glib-yaml

./: configure.ac  meson.build
libglib-yaml/: glib-yaml.h  meson.build
test/: meson.build
